[gd_scene load_steps=24 format=3 uid="uid://cbgxreqdrkunp"]

[ext_resource type="Script" path="res://scenes/insideruins.gd" id="1_62ndb"]
[ext_resource type="PackedScene" uid="uid://3kidvivnys7h" path="res://scenes/player.tscn" id="1_lhmpj"]
[ext_resource type="Theme" uid="uid://babdwm0flbrd6" path="res://ScoreSize.tres" id="2_66cxd"]
[ext_resource type="Texture2D" uid="uid://djs12xvgixocy" path="res://ancient ruins.png" id="2_h4gjj"]
[ext_resource type="Texture2D" uid="uid://bmxadfct0tyws" path="res://heart emoji.png" id="3_0yhk2"]
[ext_resource type="Script" path="res://scenes/ruins_quiz.gd" id="5_wdsa5"]
[ext_resource type="Script" path="res://scripts/quiz_ui.gd" id="5_wsle7"]
[ext_resource type="StyleBox" uid="uid://b57oijho8rmej" path="res://normal_button_quiz.tres" id="6_t2ggf"]
[ext_resource type="StyleBox" uid="uid://buit2etobpl21" path="res://CorrectAnswerStyle.tres" id="7_3n5qw"]
[ext_resource type="StyleBox" uid="uid://bph3hfo4lpnd" path="res://WrongAnswerStyle.tres" id="8_nxowf"]
[ext_resource type="StyleBox" uid="uid://dusrylw1u8v50" path="res://quiz_colours.tres" id="9_jxvrc"]
[ext_resource type="Theme" uid="uid://dvcwjkyhd571w" path="res://fontsize.tres" id="10_w6ak3"]
[ext_resource type="Script" path="res://scenes/ruins_exit.gd" id="12_axs45"]
[ext_resource type="Texture2D" uid="uid://deivqs3ffa3l4" path="res://ruins_exit.png" id="13_34axs"]
[ext_resource type="Script" path="res://scenes/ruins_dialogue_trigger.gd" id="14_j61yb"]
[ext_resource type="Script" path="res://scenes/ruins_dialogue_trigger_2.gd" id="15_4j4y3"]
[ext_resource type="AudioStream" uid="uid://w1mfr8ngi61g" path="res://audio_ruins_1.mp3" id="15_hq6op"]
[ext_resource type="AudioStream" uid="uid://c2rufxel80oal" path="res://audio_ruins_2.mp3" id="17_e40ti"]
[ext_resource type="Texture2D" uid="uid://bmowrdbkixtwt" path="res://ruins_quiz_sprite.png" id="17_uuhp7"]
[ext_resource type="AudioStream" uid="uid://ddk1rsi8vso1n" path="res://audio_ruins_4.mp3" id="18_tkcm8"]
[ext_resource type="AudioStream" uid="uid://co30bh13ho4cc" path="res://audio_ruins_3.mp3" id="20_hf1js"]

[sub_resource type="Theme" id="Theme_qdj31"]
default_font_size = 35

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ghlja"]
size = Vector2(17.5625, 20)

[node name="Insideruins" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_62ndb")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -1014.0
offset_top = -566.0
offset_right = 3753.0
offset_bottom = 1911.0
color = Color(0.6, 0.454902, 0.262745, 1)

[node name="TextureRect" type="TextureRect" parent="ColorRect"]
layout_mode = 0
offset_left = 1014.0
offset_top = 566.0
offset_right = 3564.0
offset_bottom = 1962.0
texture = ExtResource("2_h4gjj")
stretch_mode = 4

[node name="CharacterBody2D" parent="." instance=ExtResource("1_lhmpj")]
position = Vector2(81, 726)

[node name="LabelAnchor" type="Node2D" parent="CharacterBody2D"]

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="CharacterBody2D/LabelAnchor"]
remote_path = NodePath("../../../World UI/UI position")
update_rotation = false
update_scale = false

[node name="World UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 3633.0
offset_top = 2132.0
offset_right = 3749.0
offset_bottom = 2172.0

[node name="UI position" type="Node2D" parent="World UI"]
position = Vector2(-3552, -1406)

[node name="Panel" type="Panel" parent="World UI/UI position"]
offset_left = 739.0
offset_top = -533.0
offset_right = 959.0
offset_bottom = -302.0
theme_override_styles/panel = ExtResource("9_jxvrc")

[node name="Score" type="Label" parent="World UI/UI position/Panel" groups=["ScoreBox"]]
layout_mode = 0
offset_left = 29.0
offset_top = 37.0
offset_right = 190.0
offset_bottom = 117.0
theme = ExtResource("2_66cxd")
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Lives" type="Label" parent="World UI/UI position/Panel" groups=["LivesBox"]]
layout_mode = 0
offset_left = 71.5
offset_top = 125.0
offset_right = 183.5
offset_bottom = 193.0
theme = ExtResource("2_66cxd")
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Heart emoji" type="Sprite2D" parent="World UI/UI position/Panel" groups=["HeartEmoji"]]
position = Vector2(72.5, 162)
texture = ExtResource("3_0yhk2")

[node name="Panel2" type="Panel" parent="World UI/UI position" groups=["PanelBox"]]
visible = false
offset_left = -944.0
offset_top = 382.0
offset_right = 941.0
offset_bottom = 527.0
theme_override_styles/panel = ExtResource("9_jxvrc")

[node name="Label" type="Label" parent="World UI/UI position/Panel2" groups=["DialogueBox"]]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.00265252
anchor_top = -0.0344828
anchor_right = -0.00265252
anchor_bottom = 0.124138
offset_left = 37.0
offset_top = 36.0
offset_right = 1858.0
offset_bottom = 96.0
theme = SubResource("Theme_qdj31")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="QuizUI" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -1500.0
offset_right = 19.0
offset_bottom = -1480.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_wsle7")
default_style = ExtResource("6_t2ggf")
correct_style = ExtResource("7_3n5qw")
wrong_style = ExtResource("8_nxowf")

[node name="ColorRect" type="ColorRect" parent="QuizUI"]
layout_mode = 0
offset_left = -1000.0
offset_top = -554.0
offset_right = 1000.0
offset_bottom = 546.0

[node name="Panel" type="Panel" parent="QuizUI"]
layout_mode = 0
offset_left = -623.0
offset_top = -400.0
offset_right = 577.0
offset_bottom = 400.0
theme_override_styles/panel = ExtResource("9_jxvrc")

[node name="Label" type="Label" parent="QuizUI/Panel"]
layout_mode = 0
offset_left = 58.0
offset_top = 118.0
offset_right = 1150.0
offset_bottom = 359.0
theme = ExtResource("10_w6ak3")
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Button" type="Button" parent="QuizUI/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.015
anchor_bottom = 0.029
offset_left = 70.0
offset_top = 412.0
offset_right = 526.0
offset_bottom = 534.8
theme = ExtResource("10_w6ak3")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "A"

[node name="Button2" type="Button" parent="QuizUI/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.015
anchor_bottom = 0.029
offset_left = 660.0
offset_top = 412.0
offset_right = 1116.0
offset_bottom = 534.8
theme = ExtResource("10_w6ak3")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "B"

[node name="Button3" type="Button" parent="QuizUI/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.015
anchor_bottom = 0.029
offset_left = 70.0
offset_top = 596.0
offset_right = 526.0
offset_bottom = 718.8
theme = ExtResource("10_w6ak3")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "C"

[node name="Button4" type="Button" parent="QuizUI/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.015
anchor_bottom = 0.029
offset_left = 660.0
offset_top = 596.0
offset_right = 1116.0
offset_bottom = 718.8
theme = ExtResource("10_w6ak3")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "D"

[node name="TimerLabel" type="Label" parent="QuizUI/Panel"]
layout_mode = 0
offset_left = 956.0
offset_top = 29.0
offset_right = 1171.0
offset_bottom = 112.0
theme = ExtResource("10_w6ak3")
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Lives" type="Label" parent="QuizUI/Panel"]
layout_mode = 0
offset_left = 72.5
offset_top = 30.0
offset_right = 184.5
offset_bottom = 98.0
theme = ExtResource("2_66cxd")
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Heart emoji" type="Sprite2D" parent="QuizUI/Panel"]
position = Vector2(79.5, 67)
texture = ExtResource("3_0yhk2")

[node name="Hint" type="Panel" parent="QuizUI/Panel"]
layout_mode = 0
offset_left = 348.0
offset_top = 56.0
offset_right = 848.0
offset_bottom = 556.0
theme_override_styles/panel = ExtResource("9_jxvrc")

[node name="Label" type="Label" parent="QuizUI/Panel/Hint"]
layout_mode = 0
offset_left = 31.0
offset_top = 32.0
offset_right = 471.0
offset_bottom = 380.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Close Hint" type="Button" parent="QuizUI/Panel/Hint"]
layout_mode = 0
offset_left = 150.0
offset_top = 400.0
offset_right = 350.0
offset_bottom = 460.0
text = "Close Hint"

[node name="Hint Button" type="Button" parent="QuizUI/Panel"]
layout_mode = 0
offset_left = 72.0
offset_top = 371.0
offset_right = 172.0
offset_bottom = 402.0
text = "Hint"

[node name="Statistics" type="ScrollContainer" parent="QuizUI/Panel"]
layout_mode = 0
offset_left = 48.0
offset_top = 361.0
offset_right = 1153.0
offset_bottom = 750.0
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="Stats_Label" type="Label" parent="QuizUI/Panel/Statistics"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Exit" type="Button" parent="QuizUI/Panel"]
layout_mode = 0
offset_left = 1056.0
offset_top = 45.0
offset_right = 1156.0
offset_bottom = 105.0
theme_override_styles/normal = ExtResource("6_t2ggf")
text = "Exit"

[node name="Question Timer" type="Timer" parent="QuizUI"]
process_mode = 3

[node name="Global Timer" type="Timer" parent="QuizUI"]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="QuizUI"]
bus = &"SFX"

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(-7, 621, 146, 651, 212, 653, 217, 613, 449, 604, 484, 584, 417, 530, 334, 439, 291, 389, 215, 386, 200, 261, 271, 263, 265, 325, 331, 335, 326, 268, 417, 263, 422, 333, 570, 350, 563, 293, 592, 302, 590, 328, 629, 333, 646, 293, 656, 403, 712, 412, 716, 292, 750, 293, 763, 339, 814, 339, 822, 296, 942, 303, 938, 387, 812, 389, 617, 596, 619, 616, 926, 613, 923, 656, 1000, 663, 994, 613, 990, 419, 1021, 418, 1024, 493, 1088, 512, 1116, 518, 1150, 475, 1105, 416, 1148, 413, 1165, 370, 1224, 370, 1216, 236, 1270, 170, 1333, 216, 1322, 370, 1369, 376, 1456, 365, 1460, 470, 1542, 470, 1552, 746, 1614, 746, 1611, 296, 1737, 300, 1719, 224, 1629, 150, 1624, -43, -110, -37, -98, 624)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(1622, -3, 1977, 1, 1974, 109, 1900, 268, 1901, 291, 1961, 294, 1955, 347, 2025, 354, 2021, 294, 2082, 300, 2081, 347, 2146, 348, 2146, 295, 2341, 301, 2346, 489, 2283, 512, 2140, 536, 2095, 543, 2042, 638, 1969, 690, 1950, 744, 2104, 730, 2129, 770, 2188, 778, 2154, 807, 2108, 848, 2081, 866, 2034, 845, 2014, 802, 1941, 803, 1935, 1018, 2002, 1017, 1998, 974, 2253, 973, 2261, 1010, 2242, 1008, 2242, 1104, 2335, 1103, 2339, 1193, 2188, 1193, 2178, 1218, 2137, 1221, 2087, 1224, 2056, 1211, 1891, 1206, 1894, 1130, 1899, 1092, 1882, 1069, 1840, 1078, 1828, 1082, 1830, 1114, 1852, 1130, 1846, 1198, 1821, 1207, 1786, 1212, 1767, 1225, 1775, 1239, 1721, 1235, 1698, 1219, 1675, 1209, 1679, 1192, 1473, 1191, 1458, 1209, 1433, 1194, 1400, 1214, 1405, 1254, 1400, 1299, 1401, 1388, 2639, 1394, 2607, -18, 1622, -37)

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(1124, 1387, 1126, 1187, 997, 1195, 876, 1242, 823, 1272, 825, 1152, 792, 1179, 787, 1278, 750, 1268, 740, 1246, 663, 1238, 622, 1219, 600, 1204, 510, 1188, 488, 1218, 405, 1237, 304, 1215, 229, 1207, 210, 1170, 197, 1108, 210, 963, 224, 966, 225, 991, 230, 1020, 292, 1021, 300, 992, 303, 969, 356, 943, 410, 965, 395, 1004, 438, 1020, 467, 1015, 463, 974, 506, 963, 668, 963, 659, 987, 675, 1018, 734, 1018, 729, 971, 763, 958, 783, 987, 772, 1045, 794, 1072, 827, 1063, 823, 870, 788, 863, 754, 832, 750, 815, 691, 796, 633, 810, 594, 827, 570, 845, 550, 860, 512, 839, 478, 806, 445, 796, 414, 831, 382, 843, 339, 827, 323, 815, 300, 797, 287, 796, 289, 764, 271, 743, 247, 742, 234, 762, 240, 787, 235, 800, 161, 802, 148, 850, 120, 830, 89, 806, 51, 791, 11, 785, 3, 798, -83, 809, -61, 1431, 1126, 1437)

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(894, 756, 891, 1081, 954, 1078, 953, 1128, 1086, 1126, 1080, 1075, 1207, 1079, 1211, 915, 1215, 796, 1113, 797, 1102, 874, 1052, 904, 1006, 903, 991, 879, 991, 765)

[node name="CollisionPolygon2D5" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(1335, 1070, 1402, 1074, 1404, 1163, 1446, 1167, 1441, 1054, 1466, 1055, 1465, 998, 1455, 953, 1425, 927, 1404, 926, 1413, 907, 1423, 882, 1407, 828, 1392, 802, 1338, 794, 1338, 1064)

[node name="CollisionPolygon2D6" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(1668, 1100, 1667, 1130, 1716, 1151, 1747, 1127, 1748, 1101, 1721, 1071)

[node name="CollisionPolygon2D7" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(1701, 928, 1694, 961, 1720, 967, 1737, 963, 1751, 984, 1749, 1002, 1812, 1027, 1846, 1047, 1887, 1029, 1889, 995, 1885, 966, 1891, 948, 1855, 936, 1847, 922, 1802, 914, 1755, 917)

[node name="CollisionPolygon2D8" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(1644, 663, 1641, 696, 1678, 728, 1788, 666, 1781, 646, 1786, 626, 1750, 597)

[node name="CollisionPolygon2D9" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(2136, 359, 2116, 443, 2172, 465, 2211, 466, 2257, 455, 2284, 463, 2316, 455, 2305, 402, 2316, 344, 2293, 310, 2259, 343, 2269, 390, 2212, 382)

[node name="CollisionPolygon2D10" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(1647, 372, 1647, 430, 1642, 484, 1640, 504, 1662, 517, 1702, 515, 1710, 527, 1721, 543, 1780, 546, 1785, 446, 1790, 400, 1727, 395)

[node name="CollisionPolygon2D11" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(282, 1113, 272, 1188, 411, 1190, 412, 1128, 400, 1111, 287, 1109)

[node name="CollisionPolygon2D12" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(-1, 801, 1, 617, -30, 617, -27, 808)

[node name="CollisionPolygon2D13" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(1119, 1388, 1418, 1389, 1417, 1426, 1119, 1425)

[node name="Ruins Exit" type="Area2D" parent="."]
position = Vector2(1870, 1889)
script = ExtResource("12_axs45")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ruins Exit"]
position = Vector2(-1821, -1181)
scale = Vector2(8, 8)
shape = SubResource("RectangleShape2D_ghlja")

[node name="Exit" type="Sprite2D" parent="Ruins Exit"]
position = Vector2(-1797, -1158)
scale = Vector2(1.50077, 1.45171)
texture = ExtResource("13_34axs")

[node name="Label" type="Label" parent="Ruins Exit"]
offset_left = -1640.0
offset_top = -1202.0
offset_right = -1367.0
offset_bottom = -1167.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="RuinsDialogueTrigger" type="Area2D" parent="."]
scale = Vector2(5, 5)
audio_bus_name = &"Dialogue"
script = ExtResource("14_j61yb")
audio_stream = ExtResource("15_hq6op")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RuinsDialogueTrigger"]
position = Vector2(-37.6, 169.4)
polygon = PackedVector2Array(79.8, -39.2, 73.6, -9.8, 75, -9.60001, 81.2, -39.8)

[node name="RuinsDialogueTrigger2" type="Area2D" parent="."]
scale = Vector2(5, 5)
audio_bus_name = &"Dialogue"
script = ExtResource("15_4j4y3")
audio_stream1 = ExtResource("17_e40ti")
audio_stream2 = ExtResource("18_tkcm8")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RuinsDialogueTrigger2"]
position = Vector2(-203.6, 35.6)
polygon = PackedVector2Array(525.8, 115, 495.4, 154, 497.2, 201.8, 500.2, 201.8, 497.8, 154, 528, 116.4)

[node name="Ruins Quiz" type="Area2D" parent="."]
position = Vector2(443, 1297)
scale = Vector2(5, 5)
audio_bus_name = &"Dialogue"
script = ExtResource("5_wdsa5")
audio_stream = ExtResource("20_hf1js")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Ruins Quiz"]
position = Vector2(-307.6, 135)
polygon = PackedVector2Array(595.2, -237.4, 558, -209.2, 551.2, -168.4, 569.6, -164.6, 595.8, -189, 602, -219)

[node name="Sprite2D" type="Sprite2D" parent="Ruins Quiz"]
visible = false
position = Vector2(264.2, -65.8)
scale = Vector2(0.397308, 0.421033)
texture = ExtResource("17_uuhp7")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Ruins Quiz"]

[connection signal="pressed" from="QuizUI/Panel/Hint/Close Hint" to="QuizUI" method="_on_close_hint_pressed"]
[connection signal="pressed" from="QuizUI/Panel/Hint Button" to="QuizUI" method="_on_hint_button_pressed"]
[connection signal="pressed" from="QuizUI/Panel/Exit" to="QuizUI" method="_on_exit_pressed"]
[connection signal="timeout" from="QuizUI/Question Timer" to="QuizUI" method="_on_timer_timeout"]
[connection signal="mouse_entered" from="Ruins Exit" to="Ruins Exit" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Ruins Exit" to="Ruins Exit" method="_on_mouse_exited"]
[connection signal="body_entered" from="RuinsDialogueTrigger" to="RuinsDialogueTrigger" method="_on_body_entered"]
[connection signal="body_entered" from="RuinsDialogueTrigger2" to="RuinsDialogueTrigger2" method="_on_body_entered"]
[connection signal="mouse_entered" from="Ruins Quiz" to="Ruins Quiz" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Ruins Quiz" to="Ruins Quiz" method="_on_mouse_exited"]
